--- a/player.css
+++ b/player.css
@@ -1,7 +1,7 @@
-.card-title {
+.text-center {
     color: aqua;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
+    font-size: 15px;
 
 }
 /* .cardmb-3 {
